--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
             <div class="icon_blocks">
                 <div class="icon_box">
                     <div class="circle">
-                        <img class="icon" src="maket/edit.svg" alt="">
+                        <img class="icon" src="maket/Icons/edit.svg" alt="">
                     </div>
                     <h3>FEATURE ONE</h3>
                     <p>Aenean lacinia bibendum nulla sed consectetur. Vivamus sagittis lacus vel augue laoreet rutrum
@@ -89,7 +89,7 @@
                 </div>
                 <div class="icon_box">
                     <div class="circle">
-                        <img class="icon" src="maket/search.svg" alt="">
+                        <img class="icon" src="maket/Icons/search.svg" alt="">
                     </div>
                     <h3>FEATURE TWO</h3>
                     <p>Aenean lacinia bibendum nulla sed consectetur. Vivamus sagittis lacus vel augue laoreet rutrum
@@ -97,7 +97,7 @@
                 </div>
                 <div class="icon_box">
                     <div class="circle">
-                        <img class="icon" src="maket/chat.svg" alt="">
+                        <img class="icon" src="maket/Icons/chat.svg" alt="">
                     </div>
                     <h3>FEATURE THREE</h3>
                     <p>Aenean lacinia bibendum nulla sed consectetur. Vivamus sagittis lacus vel augue laoreet rutrum
@@ -105,12 +105,131 @@
                 </div>
                 <div class="icon_box">
                     <div class="circle">
-                        <img class="icon" src="maket/heart.svg" alt="">
+                        <img class="icon" src="maket/Icons/heart.svg" alt="">
                     </div>
                     <h3>FEATURE FOUR</h3>
                     <p>Aenean lacinia bibendum nulla sed consectetur. Vivamus sagittis lacus vel augue laoreet rutrum
                         faucibus.</p>
                 </div>
+            </div>
+        </div>
+    </div>
+    <div class="row_one">
+        <div class="block_text_1">
+            <div class="block_wrap text_1">
+                <p class="date">Jan 4, 2016 | In Culture</p>
+                <h1>Akita Inu Dog</h1>
+                <p>Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Lorem ipsum
+                    dolor sit amet, consectetur adipiscing elit. Donec sed odio dui. Vivamus sagittis lacus vel augue
+                    laoreet rutrum faucibus dolor auctor. <br><br>
+
+                    Donec ullamcorper nulla non metus auctor fringilla. Lorem ipsum dolor sit amet, consectetur
+                    adipiscing elit. Sed posuere consectetur </p>
+            </div>
+        </div>
+        <div class="img_block">
+            <img src="maket/E.png" alt="">
+        </div>
+    </div>
+    <div class="row_two">
+        <div class="img_block">
+            <img src="maket/W.png" alt="">
+        </div>
+        <div class="block_text_2">
+            <div class="block_wrap text_2">
+                <p class="date">Jan 4, 2016 | In Culture</p>
+                <h1>Akita Inu Dog</h1>
+                <p>Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Lorem ipsum
+                    dolor sit amet, consectetur adipiscing elit. Donec sed odio dui. Vivamus sagittis lacus vel augue
+                    laoreet rutrum faucibus dolor auctor. <br><br>
+
+                    Donec ullamcorper nulla non metus auctor fringilla. Lorem ipsum dolor sit amet, consectetur
+                    adipiscing elit. Sed posuere consectetur </p>
+            </div>
+        </div>
+    </div>
+    <div class="wrapper cards_wrapper">
+        <div class="container container_cards">
+            <div class="cards_title">
+                <div class="cards_title_b">
+                    <h1>Let's blog</h1>
+                    <p>B</p>
+                </div>
+                <h3>We love clean design and advanced digital solutions.</h3>
+            </div>
+            <div class="cards">
+                <div class="card">
+                    <div class="card_img">
+                        <img src="maket/Layer 83.png" alt="">
+                    </div>
+                    <h3>Fresh Summer Campaign</h3>
+                    <p>Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Lorem ipsum
+                        dolor sit amet, consectetur adipiscing elit. Donec sed odio dui. Vivamus sagittis lacus vel
+                        augue.</p>
+                </div>
+                <div class="card">
+                    <div class="card_img">
+                        <img src="maket/Layer 85.png" alt="">
+                    </div>
+                    <h3>Fresh Summer Campaign</h3>
+                    <p>Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Lorem ipsum
+                        dolor sit amet, consectetur adipiscing elit. Donec sed odio dui. Vivamus sagittis lacus vel
+                        augue.</p>
+                </div>
+                <div class="card">
+                    <div class="card_img">
+                        <img src="maket/Layer 84.png" alt="">
+                    </div>
+                    <h3>Fresh Summer Campaign</h3>
+                    <p>Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Lorem ipsum
+                        dolor sit amet, consectetur adipiscing elit. Donec sed odio dui. Vivamus sagittis lacus vel
+                        augue.</p>
+                </div>
+                <div class="card">
+                    <div class="card_img">
+                        <img src="maket/Layer 83.png" alt="">
+                    </div>
+                    <h3>Fresh Summer Campaign</h3>
+                    <p>Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Lorem ipsum
+                        dolor sit amet, consectetur adipiscing elit. Donec sed odio dui. Vivamus sagittis lacus vel
+                        augue.</p>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="wpapper info_wrapper">
+        <div class="container info_conteiner">
+            <div class="info_block">
+                <img class="icon" src="maket/Icons/edit.svg" alt="">
+                <p>Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Lorem ipsum
+                    dolor sit amet, consectetur adipiscing elit. Donec sed odio dui. Vivamus sagittis lacus vel augue
+                    laoreet rutrum faucibus dolor auctor.</p>
+            </div>
+            <div class="info_block">
+                <img class="icon" src="maket/Icons/edit.svg" alt="">
+                <p>Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Lorem ipsum
+                    dolor sit amet, consectetur adipiscing elit. Donec sed odio dui. Vivamus sagittis lacus vel augue
+                    laoreet rutrum faucibus dolor auctor.</p>
+            </div>
+        </div>
+    </div>
+    <div class="wrapper tutorial_wrapper">
+        <div class="container tutorial_container">
+            <div class="tutorial_content">
+                <div class="tutorial_text">
+                    <h1>Akita Inu Dog</h1>
+                    <p>Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Lorem ipsum
+                        dolor sit amet, consectetur adipiscing elit. Donec sed odio dui. Vivamus sagittis lacus vel augue
+                        laoreet rutrum faucibus dolor auctor.</p>
+                </div>
+                <div class="tutorial_buttons">
+                    <button id="full" class="link_t"><p>Fully Responsive Design</p><span></span></button>
+                    <button id="high" class="link_t"><p>High Quality Code</p><span></span></button>
+                    <button id="different" class="link_t"><p>Different Headers & Layout</p><span></span></button>
+                </div>
+            </div>
+            <div class="tutorial_image">
+                <img src="maket/Phone.png" alt="">
             </div>
         </div>
     </div>
