add new block 'team cards'

--- a/index.html
+++ b/index.html
@@ -233,8 +233,50 @@
             </div>
         </div>
     </div>
+    <div class="wrapper wrapper_team_cards">
+        <div class="container conteiner_team_cards">
+            <div class="cards_title">
+                <div class="cards_title_b">
+                    <h1>OUR TEAM</h1>
+                    <p>T</p>
+                </div>
+                <h3> sales long tail influencer pitch release niche market.</h3>
+            </div>
+            <div class="cards_team">
+                <div class="card_team">
+                    <img src="maket/people1.png" alt="">
+                    <div class="title_team">
+                        <h3>LADY SANSA</h3>
+                        <p>CEO</p>
+                    </div>
+                </div>
+                <div class="card_team">
+                    <img src="maket/people2.png" alt="">
+                    <div class="title_team">
+                        <h3>DAVID SMITH</h3>
+                        <p>WebDesigner</p>
+                    </div>
+                </div>
+                <div class="card_team">
+                    <img src="maket/people3.png" alt="">
+                    <div class="title_team">
+                        <h3>JACK WOLLER</h3>
+                        <p>Photographer</p>
+                    </div>
+                </div>
+                <div class="card_team">
+                    <img src="maket/people4.png" alt="">
+                    <div class="title_team">
+                        <h3>JOHN SNOW</h3>
+                        <p>Photographer</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 
     <script src="js/script.js"></script>
+    
 </body>
 
 </html>
