--- a/index.html
+++ b/index.html
@@ -309,13 +309,15 @@
             </div>
         </div>
     </div>
+    <footer>
+        <div class="wrapper wrapper_footer">
+            <div class="container container_footer">
+                <p>© 2020 PSDfreebies.com – All Right Reserved</p>
+                <p>Developed by Malyshev Bogdan</p>
+            </div>
+        </div>
+    </footer>
     
-    <div class="modal_map">
-        
-
-        <button class="btn_input" id="btn_close_map">X</button>
-
-    </div>
 
 
     <script src="js/script.js" type="text/javascript"></script>
