--- a/index.html
+++ b/index.html
@@ -244,7 +244,7 @@
                 <div class="tutorial_buttons">
                     <button class="link_t"><span class="wrapper_p"><p>Fully Responsive Design</p></span><span class="btn_tutorial"></span></button>
                     <button class="link_t"><span class="wrapper_p"><p>High Quality Code</p></span><span class="btn_tutorial"></span></button>
-                    <button class="link_t"><span class="wrapper_p"><p>Different Headers & Layout</p></span class="btn_tutorial"><span></span></button>
+                    <button class="link_t"><span class="wrapper_p"><p>Different Headers & Layout</p></span><span class="btn_tutorial"></span></button>
                 </div>
             </div>
             <div class="tutorial_image">
